[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/icons/display/description_backround.png" type="Texture" id=5]
[ext_resource path="res://windows/recover_password.gd" type="Script" id=6]
[ext_resource path="res://Windows/cbar.gd" type="Script" id=11]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 15
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 15
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 13
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=7]
resource_name = "try_another_way"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 608, -0.25, 0, 0.25, 0, 560, -0.25, 0, 0.25, 0, 568, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 12 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="backround/icon"]
margin_left = -128.0
margin_top = 136.0
margin_right = 256.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 1 )
text = "Recover Password"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notice" type="TextureRect" parent="backround"]
margin_left = 320.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 512.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="method_2_3_text" type="RichTextLabel" parent="."]
visible = false
margin_left = 328.0
margin_top = 288.0
margin_right = 696.0
margin_bottom = 472.0
custom_fonts/normal_font = SubResource( 2 )
text = "If you are not the owner of this account but need admin access, The current administrator ({1}) may be contacted using ({2})."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_answer" type="Control" parent="."]
margin_left = 328.0
margin_top = 288.0
margin_right = 696.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question_label" type="Label" parent="question_answer"]
margin_top = -29.0
margin_right = 368.0
margin_bottom = -15.0
text = "Question"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="RichTextLabel" parent="question_answer"]
margin_right = 368.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator" type="Label" parent="question_answer"]
margin_top = 120.0
margin_right = 368.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 0.270588, 0.270588, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer" type="LineEdit" parent="question_answer"]
margin_left = 56.0
margin_top = 80.0
margin_right = 312.0
margin_bottom = 112.0
max_length = 28
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Answer"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="question_answer"]
margin_left = 296.0
margin_top = 192.0
margin_right = 366.0
margin_bottom = 216.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="question_answer"]
margin_top = 192.0
margin_right = 58.0
margin_bottom = 216.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Cancel"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="Button" parent="."]
visible = false
margin_left = 488.0
margin_top = 480.0
margin_right = 535.0
margin_bottom = 504.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Done"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="try_another_way" type="Button" parent="."]
margin_left = 456.0
margin_top = 568.0
margin_right = 568.0
margin_bottom = 589.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 0.705882 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Try another way"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="try_another_way"]
autoplay = "try_another_way"
anims/try_another_way = SubResource( 7 )

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="question_answer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="question_answer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="try_another_way" to="." method="_on_try_another_way_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
